--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,8 @@
-environment: development
-
-mandrill:
-  clientkey:  
-  from:       proxy@gmail.com
+imap:
+  hostname: localhost
+  port:     143
+  login:    
+  password: 
 
 amqp:
   hostname:     amqp://guest:guest@localhost:5672/
