--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,9 @@
 imap:
   hostname: localhost
   port:     143
-  login:    
-  password: 
+  login:    your_login
+  password: your_password
 
 amqp:
   hostname:     amqp://guest:guest@localhost:5672/
-  messagequeue: email_poller_messages
+  messagequeue: message_queue_name
